<resources>
    <string name="app_name">Rijeka Bus</string>
    <string name="web_client_id">43428668956-ojh3mc6lscf1e1usv495nskpk5bn5vg6.apps.googleusercontent.com</string>
    <string name="hello_world">Hello World</string>
    <string name="bus_illustration">Bus illustration</string>
    <string name="app_description">Discover Rijeka public transport</string>
    <string name="login_description_detailed">Detailed information and navigation for bus lines and stations in city of Rijeka.</string>
    <string name="try_without_an_account">Try without an account</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="placeholder">Placeholder</string>
    <string name="important_information">Service &amp; info</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_favorites_title">Favorites</string>
    <string name="menu_bus_lines_title">Bus Lines</string>
    <string name="menu_bus_station_title">Bus Station</string>
    <string name="lost_and_found">Lost &amp; Found</string>
    <string name="chat">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps_action_button">Maps action button</string>
    <string name="about">About</string>
    <string name="vestibulum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquam sapien odio, eget auctor ante congue at. Praesent nec dolor leo. In hac habitasse platea dictumst. In porttitor lobortis diam tincidunt faucibus. Mauris pharetra libero eu quam sodales porta. Quisque fermentum nunc eros, quis lobortis justo iaculis iaculis. Morbi fringilla ligula et lorem interdum congue.</string>
    <string name="more_info">More Info</string>
    <string name="clear_my_favorites_list">Clear Favorites List</string>
    <string name="youtube_url">htttp://youtube.com</string>
    <string name="ok">OK</string>
    <string name="enter_valid_url">Enter a valid url</string>
    <string name="please_insert_value">Please insert value</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_results_found">No results found</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="unit_type">Unit type</string>
    <string name="metric_cm_kg">Metric (cm, kg)</string>
    <string name="imperial_ft_lb">Imperial (ft, lb)</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="location">Location</string>
    <string name="rijeka">Rijeka</string>
    <string name="weather_icon">Weather icon</string>
    <string name="city_icon">City icon</string>
    <string name="telephone">Telephone</string>
    <string name="telephone_icon">Telephone icon</string>
    <string name="filters_search_error_desc">Try adjusting your search or filter to find what you are looking for.</string>
    <string name="favorites_error_desc">No favorites, try clicking a star for line or station, or contact support.</string>
    <string name="no_buses_error_desc">Current line is not driving currently, please check the schedule.</string>
    <string name="no_stations_error_desc">Current station does not receive any buses soon, please check the schedule.</string>
    <string name="departure_failed">Unkown</string>
    <string name="map">Map</string>
    <string name="class_name">Razvoj Mobilnih Aplikacija</string>
    <string name="class_year">Class 2023</string>
    <string name="label_app_name">APP NAME</string>
    <string name="lbl_api_credit">API CREDIT</string>
    <string name="api_credits"><![CDATA[Autotrolej, OpenWeather & City Rijeka]]></string>
    <string name="city_map">City scheme</string>
    <string name="outer_city_map">Suburban scheme</string>
    <string name="my_routes">My Routes</string>
    <string name="no_favorite_routes">You don\'t have any favorite routes yet</string>
    <string name="schedules">Schedules</string>
    <string name="mail">Mail</string>
    <string name="city_card">City Card</string>
    <string name="news">News</string>
    <string name="pressure">Pressure</string>
    <string name="sight">Sight</string>
    <string name="welcome">Welcome,</string>
    <string name="welcome_to">Welcome to</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="enter_your_new_name">Enter your new name</string>
    <string name="enter_your_name">Edit your username</string>
    <string name="not_implemented">Not implemented</string>
    <string name="clear_favorites_list">Clear all favorites</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>
    <string name="all_bus_stations_rijeka">All Bus Stations</string>
    <string name="no_mail_app">No email app found</string>
    <string name="dismiss">Dismiss</string>
    <string name="all_bus_lines_rijeka">All Bus Lines</string>
    <string name="filter_lines">Filter Lines</string>
    <string name="lines">Lines</string>
    <string name="filter_stations">Filter Stations</string>
    <string name="stations">Stations</string>
    <string name="zone">Zones</string>
    <string name="city_bus">City</string>
    <string name="suburban_bus">Suburban</string>
    <string name="night_bus">Night</string>
    <string name="nearest_to_my_location">Nearest to my location</string>
    <string name="apply">APPLY</string>
    <string name="current_stops">Current stops</string>
    <string name="add">Add</string>
    <string name="type_a_photo_title_ie">Photo title</string>
    <string name="paste_photo_url">Paste photo url</string>
    <string name="url">Url</string>
    <string name="add_player_photo">Add station photo</string>
    <string name="delete_all_photos">Delete all photos</string>
    <string name="editbutton">Edit button</string>
    <string name="manage_photos">Manage photos</string>
    <string name="error_deleting_image">Error deleting image</string>
    <string name="search">Search</string>
    <string name="alaram">Alarm</string>
    <string name="alaram_ringing">Your alarm is ringing!</string>
    <string name="alaram_set">Alarm Set</string>
    <string name="alaram_at">Alarm will go off at</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="total_trips">Total trips</string>
    <string name="google_login_failed">Google Sign-In failed</string>
    <string name="anonymous_login_failed">Anonymous Sign-In failed</string>
    <string name="string_dark_theme">Dark theme</string>
    <string name="string_language_select">Select language</string>
    <string name="string_default_language">English</string>
    <string name="date_time_format">Date Format</string>
    <string name="time_format">Time Format</string>
    <string name="_24_hour_clock">24 hour clock</string>
    <string name="_12_hour_clock">12 hour clock</string>
    <string name="communication">Communication</string>
    <string name="rate_us">Rate us</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="schedule_timeline">Schedule Timeline</string>
    <string name="active_buses">Active buses</string>
    <string name="station_schedule_for">Schedule for %1$s</string>
    <string name="bus_schedule_for">Schedule for Line %1$s - %2$s</string>
    <string name="weekday">Weekday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="bus_line_departures">Bus Line Departures</string>
    <string name="station_schedule">Station Schedule</string>
    <string name="comments">Comments</string>
    <string name="rate_this_bus">Rate This Bus</string>
    <string name="average_rating">Average Rating:</string>
    <string name="your_rating">Your Rating:</string>
    <string name="submit">Submit</string>
    <string name="you_already_rated">You have already rated this bus today</string>
    <string name="like_button">Like</string>
    <string name="delete_comment">Delete comment</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="add_comment">Add comment</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send message</string>
    <string name="no_comments_yet">No comments yet</string>
    <string name="no_ratings_yet">No ratings yet</string>
    <string name="lost_and_found_service">Lost and Found Service</string>
    <string name="lost_found_info">Information</string>
    <string name="lost_found_description">If you\'ve lost an item on a bus in Rijeka, you can contact Autotrolej\'s Lost and Found service. Items found on buses are kept for 30 days before being handed over to the city\'s lost property office.</string>
    <string name="autotrolej_address">Jelačićev trg 3, 51000 Rijeka, Croatia</string>
    <string name="view_on_map">View on Map</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="autotrolej_phone">+385 51 311 400</string>
    <string name="email">Email</string>
    <string name="autotrolej_email">autotrolej@autotrolej.hr</string>
    <string name="website">Website</string>
    <string name="autotrolej_website">www.autotrolej.hr</string>
    <string name="back">Back</string>
    <string name="report_lost_item">Report Lost Item</string>
    <string name="office_hours">Office Hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="closed">Closed</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="no_messages_yet">No messages yet. Start the conversation!</string>
    <string name="public_chat">Public Chat</string>
    <string name="send">Send</string>
    <string name="message_hint">Type your message here</string>
    <string name="login_to_chat">Please login to participate in the chat</string>
    <string name="chat_description">Chat with other passengers</string>
    <string name="direct_message">Direct Message</string>
    <string name="select_user">Select User</string>
    <string name="chat_history">Chat History</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="last_seen">Last seen: %1$s</string>
    <string name="settings_saved">Settings saved</string>
    <string name="favorites_cleared">Favorites list cleared</string>
    <string name="my_location">My location</string>
    <string name="Active">Active</string>
    <string name="Lines">Lines</string>
    <string name="Schedule">Schedule</string>
    <string name="Line">Line</string>
    <string name="filter_by_line">Filter by Line</string>
    <string name="filter">Filter</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="duration">Duration</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="go">Go</string>
    <string name="notify">Notify</string>
    <string name="faq_question_1">What should I do if I lost something on a bus?</string>
</resources>