<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/favorites"
            android:title="@string/menu_favorites_title"
            android:icon="@drawable/ic_star_full" />

        <item
            android:id="@+id/lines"
            android:title="@string/menu_bus_lines_title"
            android:icon="@drawable/ic_bus" />

        <item
            android:id="@+id/stations"
            android:title="@string/stations"
            android:icon="@drawable/ic_bus_stop" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/communication">

            <menu>
                <item
                    android:id="@+id/settings"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_settings" />

                <item
                    android:id="@+id/about"
                    android:title="@string/about"
                    android:icon="@drawable/ic_about" />

                <item
                    android:id="@+id/rate"
                    android:title="@string/rate_us"
                    android:icon="@drawable/ic_rate" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/profile">

            <menu>
                <item
                    android:id="@+id/profile"
                    android:title="@string/profile"
                    android:visible="false"
                    android:icon="@drawable/ic_person" />

                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"
                    android:visible="false"
                    android:icon="@drawable/ic_logout" />

                <item
                    android:id="@+id/login"
                    android:title="@string/login"
                    android:icon="@drawable/ic_login" />
            </menu>
        </item>
    </group>

</menu>