<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.RijekaBusApp"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/transparent_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        android:theme="@style/HeadlineLargeNLv1Left" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/class_name"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAbout" />

    <TextView
        android:id="@+id/tvClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/class_year"
        android:theme="@style/BodyLargeNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageContainer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvClass">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical|start"
                android:id="@+id/ivSofa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/riteh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_gravity="center_vertical|end"
                android:id="@+id/ivAndroid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:src="@drawable/ic_android"
                app:tint="@color/greenish" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lblAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_app_name"
        android:textAppearance="@style/HeadlineSmallNLv2Left" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/app_name"
        android:textAppearance="@style/BodyLargeNLv1Left" />

    <TextView
        android:id="@+id/lblApiCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_api_credit"
        android:textAppearance="@style/HeadlineSmallNLv2Left" />

    <TextView
        android:id="@+id/tvApiCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/api_credits"
        android:textAppearance="@style/BodyLargeNLv1Left" />

    <TextView
        android:id="@+id/lblDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Developer"
        android:textAppearance="@style/HeadlineSmallNLv2Left" />

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="KF"
        android:textAppearance="@style/BodyLargeNLv1Left" />

</LinearLayout>