<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.RijekaBusApp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to"
        android:textColor="@color/login_welcome_text_color"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_to"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="38sp" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/bus_login_animation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignIn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/anonymousSignIn"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="16dp"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/color_secondary"
        app:cornerRadius="16dp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/anonymousSignIn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="70dp"
        android:paddingVertical="16dp"
        android:text="@string/try_without_an_account"
        android:textAllCaps="true"
        android:textAppearance="@style/ButtonLabelOnSurfaceCenter"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:strokeColor="@color/grey"
        app:strokeWidth="2dp"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>
